--- a/index.htm
+++ b/index.htm
@@ -100,7 +100,7 @@
     <div class="demo_wrap">
         <h1><img src="one_page/images/logo.svg" alt=""><span>主題網站</span></h1>
         <div class="btn_grp">
-            <a href="#" class="btn">切版檔案請按此下載</a>
+            <a href="https://github.com/HywebU00/2020_nmns_theme" class="btn">切版檔案請按此下載</a>
         </div>
         <hr>
         <div class="table_wrapper">
