20200323 單一頁面修改css,  多頁式上傳畫面，待確認

--- a/index.htm
+++ b/index.htm
@@ -149,6 +149,59 @@
             </table>
 
              <h2>多頁式</h2>
+             <table>
+                <thead>
+                    <tr>
+                        <th class="num">編號</th>
+                        <th>頁面名稱</th>
+                        <th>檔案名稱</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td>活動介紹</td>
+                        <!-- 連結放到a裡面就好 -->
+                        <td><a href="mulit_page/活動介紹.htm"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>活動內容</td>
+                        <!-- 連結放到a裡面就好 -->
+                        <td><a href="mulit_page/活動內容.htm"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>我要報名</td>
+                        <!-- 連結放到a裡面就好 -->
+                        <td><a href="mulit_page/我要報名.htm"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>登錄名單</td>
+                        <!-- 連結放到a裡面就好 -->
+                        <td><a href="mulit_page/登錄名單.htm"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>報名資料確認</td>
+                        <!-- 連結放到a裡面就好 -->
+                        <td><a href="mulit_page/報名資料確認.htm"></a></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>報名資料確認（團報團繳）</td>
+                        <!-- 連結放到a裡面就好 -->
+                        <td><a href="mulit_page/報名資料確認_團報團繳.htm"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>報名/繳費方式</td>
+                        <!-- 連結放到a裡面就好 -->
+                        <td><a href="mulit_page/報名繳費方式.htm"></a></td>
+                    </tr>
+                </tbody>
+            </table>
              
         </div>
     </div>
