20200324 上傳選單垂直頁面

--- a/mulit_page/報名資料確認_團報團繳.htm
+++ b/mulit_page/報名資料確認_團報團繳.htm
@@ -36,9 +36,9 @@
                     <ul>
                         <li><a href="#">活動介紹</a></li>
                         <li><a href="#">活動內容</a></li>
-                        <li><a href="#">報名／繳費方式</a></li>
+                        <li><a href="#">報名/繳費方式</a></li>
                         <li><a href="#">我要報名</a></li>
-                        <li><a href="#">查詢取消</a></li>
+                        <li><a href="#">查詢/取消</a></li>
                     </ul>
                 </nav>
                 <!-- menu End -->
@@ -48,8 +48,8 @@
         <!-- main Start -->
         <div id="center" class="main">
             <!-- 內頁新增一個classname-->
-            <a class="accesskey" href="#aC" id="aC" accesskey="C" title="主要內容區">:::</a>
             <div class="container">
+                <a class="accesskey" href="#aC" id="aC" accesskey="C" title="主要內容區">:::</a>
                 <div class="breadcrumb">
                     <ul>
                         <li><a href="#">返回個人報名首頁</a></li>
@@ -126,15 +126,15 @@
                             <table>
                                 <tr>
                                     <th>身分證字號：</th>
-                                    <td><input type="text" id="" value="請輸入身份證字號"  placeholder="請輸入身份證字號"/></td>
+                                    <td><input type="text" id="" value="請輸入身份證字號" placeholder="請輸入身份證字號" /></td>
                                 </tr>
                                 <tr>
                                     <th>姓名：</th>
-                                    <td><input type="text" id="" value="請輸入姓名" placeholder="請輸入姓名"/></td>
+                                    <td><input type="text" id="" value="請輸入姓名" placeholder="請輸入姓名" /></td>
                                 </tr>
                                 <tr>
                                     <th>出生年月日：</th>
-                                    <td><input type="text" id="" value="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25" placeholder="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25"/></td>
+                                    <td><input type="text" id="" value="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25" placeholder="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25" /></td>
                                 </tr>
                             </table>
                         </div>
@@ -143,15 +143,15 @@
                             <table>
                                 <tr>
                                     <th>身分證字號：</th>
-                                    <td><input type="text" id="" value="請輸入身份證字號"  placeholder="請輸入身份證字號"/></td>
+                                    <td><input type="text" id="" value="請輸入身份證字號" placeholder="請輸入身份證字號" /></td>
                                 </tr>
                                 <tr>
                                     <th>姓名：</th>
-                                    <td><input type="text" id="" value="請輸入姓名" placeholder="請輸入姓名"/></td>
+                                    <td><input type="text" id="" value="請輸入姓名" placeholder="請輸入姓名" /></td>
                                 </tr>
                                 <tr>
                                     <th>出生年月日：</th>
-                                    <td><input type="text" id="" value="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25" placeholder="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25"/></td>
+                                    <td><input type="text" id="" value="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25" placeholder="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25" /></td>
                                 </tr>
                             </table>
                         </div>
@@ -160,32 +160,32 @@
                             <table>
                                 <tr>
                                     <th>身分證字號：</th>
-                                    <td><input type="text" id="" value="請輸入身份證字號"  placeholder="請輸入身份證字號"/></td>
+                                    <td><input type="text" id="" value="請輸入身份證字號" placeholder="請輸入身份證字號" /></td>
                                 </tr>
                                 <tr>
                                     <th>姓名：</th>
-                                    <td><input type="text" id="" value="請輸入姓名" placeholder="請輸入姓名"/></td>
+                                    <td><input type="text" id="" value="請輸入姓名" placeholder="請輸入姓名" /></td>
                                 </tr>
                                 <tr>
                                     <th>出生年月日：</th>
-                                    <td><input type="text" id="" value="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25" placeholder="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25"/></td>
+                                    <td><input type="text" id="" value="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25" placeholder="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25" /></td>
                                 </tr>
                             </table>
                         </div>
                         <div class="activity_Tb">
                             <h4>成員五</h4>
                             <table>
-                                 <tr>
+                                <tr>
                                     <th>身分證字號：</th>
-                                    <td><input type="text" id="" value="請輸入身份證字號"  placeholder="請輸入身份證字號"/></td>
+                                    <td><input type="text" id="" value="請輸入身份證字號" placeholder="請輸入身份證字號" /></td>
                                 </tr>
                                 <tr>
                                     <th>姓名：</th>
-                                    <td><input type="text" id="" value="請輸入姓名" placeholder="請輸入姓名"/></td>
+                                    <td><input type="text" id="" value="請輸入姓名" placeholder="請輸入姓名" /></td>
                                 </tr>
                                 <tr>
                                     <th>出生年月日：</th>
-                                    <td><input type="text" id="" value="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25" placeholder="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25"/></td>
+                                    <td><input type="text" id="" value="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25" placeholder="請輸入生日 範例yyyy/mm/dd 範例：1996/12/25" /></td>
                                 </tr>
                                 <tr>
                                     <th>欄位說明：</th>
