--- a/mulit_page/活動介紹.htm
+++ b/mulit_page/活動介紹.htm
@@ -36,9 +36,9 @@
                     <ul>
                         <li><a href="#">活動介紹</a></li>
                         <li><a href="#">活動內容</a></li>
-                        <li><a href="#">報名／繳費方式</a></li>
+                        <li><a href="#">報名/繳費方式</a></li>
                         <li><a href="#">我要報名</a></li>
-                        <li><a href="#">查詢取消</a></li>
+                        <li><a href="#">查詢/取消</a></li>
                     </ul>
                 </nav>
                 <!-- menu End -->
@@ -48,8 +48,8 @@
         <!-- main Start -->
         <div id="center" class="main">
             <!-- 內頁新增一個classname-->
-            <a class="accesskey" href="#aC" id="aC" accesskey="C" title="主要內容區">:::</a>
             <div class="container">
+                <a class="accesskey" href="#aC" id="aC" accesskey="C" title="主要內容區">:::</a>
                 <div class="breadcrumb">
                     <ul>
                         <li><a href="#">返回個人報名首頁</a></li>
@@ -57,7 +57,7 @@
                         <li>節點</li> -->
                     </ul>
                 </div>
-                 <!-- function功能區塊 -->
+                <!-- function功能區塊 -->
                 <!-- <div class="function">
                     <ul>
                         <li class="icon_back"><a href="#">回上一頁</a></li>
@@ -65,7 +65,6 @@
                 </div> -->
                 <!-- h2節點 -->
                 <h2 class="title">活動介紹</h2>
-               
                 <!-- CP start -->
                 <section class="cp">
                     <div class="image">
