--- a/mulit_page/活動介紹_選單垂直.htm
+++ b/mulit_page/活動介紹_選單垂直.htm
@@ -24,7 +24,7 @@
     <!-- 直接跳主內容區 -->
     <a class="goCenter" href="#center" tabindex="1">按Enter到主內容區</a>
     <!-- wrapper Start -->
-    <div class="wrapper">
+    <div class="wrapper  menu_vertical">
         <!-- header Start -->
         <header class="header">
             <div class="container">
@@ -58,67 +58,30 @@
                     </ul>
                 </div>
                 <!-- function功能區塊 -->
-                <div class="function">
+                <!-- <div class="function">
                     <ul>
                         <li class="icon_back"><a href="#">回上一頁</a></li>
                     </ul>
-                </div>
+                </div> -->
                 <!-- h2節點 -->
-                <h2 class="title">我要報名</h2>
-                <!-- LP start -->
-                <section class="lp">
-                    <div class="content">
-                        <div class="explanation"> 謝謝您的熱烈參與，若已至開放報名時間，仍看不到報名按鈕，請務必執行重新整理命令(或按F5鍵)以取得最新資料。 本活動 報名採用 額滿為止的錄取方式， 已報名梯次是否正式錄取請參看個人報名資訊主頁！ </div>
-                        <!-- 表格start -->
-                        <div class="table_list">
-                            <table summary="">
-                                <thead>
-                                    <tr>
-                                        <th>活動名稱</th>
-                                        <th>活動日期</th>
-                                        <th>報名狀態</th>
-                                        <th>登錄人數</th>
-                                        <th>登錄名單</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>給貓頭鷹一個家</td>
-                                        <td class="aCenter">2019/11/09(六) 13:00~16:00 </td>
-                                        <td class="aCenter">2019/10/16上午10:00:00<br> 開放報名</td>
-                                        <td class="aCenter">&nbsp;</td>
-                                        <td class="aCenter">&nbsp;</td>
-                                    </tr>
-                                    <tr>
-                                        <td><a href="#">給貓頭鷹一個家</a></td>
-                                        <td class="aCenter">2019/11/09(六) 13:00~16:00 </td>
-                                        <td class="aCenter">已截止</td>
-                                        <td class="aCenter">49</td>
-                                        <td class="aCenter"><button type="button" class="btn btn-gray">登錄名單</button></td>
-                                    </tr>
-                                    <tr>
-                                        <td>給貓頭鷹一個家</td>
-                                        <td class="aCenter">2019/10/16(三) 14:00~15:00 </td>
-                                        <td class="aCenter"><button type="button" class="btn btn-orange signupbtn">我要報名</button></td>
-                                        <td class="aCenter">32</td>
-                                        <td class="aCenter"><button type="button" class="btn btn-gray">登錄名單</button></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                        <!-- 表格end  -->
-                        <!-- 會員登入start -->
-                        <div class="member_login">
-                            <h3>會員登入</h3>
-                            <div class="remind">貼心小提醒：</div>
-                            <p>科教活動個人報名系統已正式納入單一登入服務，108/9/30前已在本系統註冊過的學員，仍需先加入「科博館會員」，之後用科博館會員帳密登入即可快速報名/查詢個人報名系統的科教活動</p>
-                            <p class="word_red">108/9/30前已成功報名/繳費的學員仍保有原先狀態，不受任何影響。</p>
-                            <button>會員單一登入</button>
-                        </div>
-                        <!-- 會員登入end -->
+                <h2 class="title">活動介紹</h2>
+                <!-- CP start -->
+                <section class="cp">
+                    <div class="image">
+                        <img src="images/pic01.jpg" ">
                     </div>
+                    <ul>
+                        <li><span>活動對象：</span>一般親子</li>
+                        <li><span>活動地點：</span>鳳凰谷鳥園生態園區 (南投縣鹿谷鄉鳳凰村仁義路1-9號)</li>
+                        <li><span>活動日期：</span>108/11/9 (六)</li>
+                        <li><span>報名人數：</span>預計55人，如報名未達30人，活動取消。</li>
+                        <li><span>活動費用：</span>每人新台幣300元整(含講師費、材料費等)。</li>
+                        <li><span>聯絡方式：</span>049-2753100分機122 曾小姐</li>
+                        <li><span>E-MAIL：</span>tseng@nmns.edu.tw</li>
+                    </ul>
+                    <p class=" blockclear">國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。</p>
                 </section>
-                <!-- LP End -->
+                <!-- CP End -->
             </div>
         </div>
         <!-- footer Start-->
