20200324 調整單頁式 分版 class的位置

--- a/index.htm
+++ b/index.htm
@@ -162,7 +162,8 @@
                         <td></td>
                         <td>活動介紹</td>
                         <!-- 連結放到a裡面就好 -->
-                        <td><a href="mulit_page/活動介紹.htm"></a><br><a href="mulit_page/活動介紹_選單垂直.htm"></a></td>
+                        <td><a href="mulit_page/活動介紹_天文.htm"></a><br><a href="mulit_page/活動介紹_選單垂直.htm"></a>
+                            <br><a href="mulit_page/活動介紹_自然學友之家.htm"></a></td>
                     </tr>
                     <tr>
                         <td></td>
