--- a/mulit_page/活動介紹_自然學友之家.htm
+++ b/mulit_page/活動介紹_自然學友之家.htm
@@ -25,7 +25,7 @@
     <!-- 直接跳主內容區 -->
     <a class="goCenter" href="#center" tabindex="1">按Enter到主內容區</a>
     <!-- wrapper Start -->
-    <div class="wrapper">
+    <div class="wrapper version02">
         <!-- header Start -->
         <header class="header">
             <div class="container">
@@ -59,74 +59,30 @@
                     </ul>
                 </div>
                 <!-- function功能區塊 -->
-                <div class="function">
+                <!-- <div class="function">
                     <ul>
                         <li class="icon_back"><a href="#">回上一頁</a></li>
                     </ul>
-                </div>
+                </div> -->
                 <!-- h2節點 -->
-                <h2 class="title">報名資料確認</h2>
-                <!-- LP start -->
-                <section class="lp">
-                    <div class="content">
-                        <div class="explanation"> 這是您剛才所選活動的詳細內容，請詳閱清楚。如確定這就是您要報名的活動，請按『登錄報名』進行報名，若想報名其他活動則請按『取消』。 </div>
-                        <h3>請確認您的報名的活動資料</h3>
-                        <!-- 表格start -->
-                        <div class="activity_Tb">
-                            <table>
-                                <tr>
-                                    <th>活動名稱：</th>
-                                    <td>創意機關王主題研習</td>
-                                </tr>
-                                <tr>
-                                    <th>活動時間：</th>
-                                    <td>2020/1/19(日)</td>
-                                </tr>
-                                <tr>
-                                    <th>費用：</th>
-                                    <td>1000</td>
-                                </tr>
-                                <tr>
-                                    <th>活動對象：</th>
-                                    <td>國中2年級</td>
-                                </tr>
-                                <tr>
-                                    <th>活動內容：</th>
-                                    <td>冒險蟲蟲、四足巨獸及橫行霸道</td>
-                                </tr>
-                            </table>
-                        </div>
-                        <!-- 表格end  -->
-                        <h3>請確認您的基本資料</h3>
-                        <!-- 表格start -->
-                        <div class="activity_Tb">
-                            <table>
-                                <tr>
-                                    <th>身分證字號：</th>
-                                    <td>A123456789</td>
-                                </tr>
-                                <tr>
-                                    <th>姓名：</th>
-                                    <td>羅郁晴</td>
-                                </tr>
-                                <tr>
-                                    <th>出生年月日：</th>
-                                    <td>1990/03/19</td>
-                                </tr>
-                                <tr>
-                                    <th>手機：</th>
-                                    <td>0912-345678</td>
-                                </tr>
-                            </table>
-                        </div>
-                        <!-- 表格end  -->
-                        <div class="btn_grp">
-                            <input name="Search" type="submit" value="登入報名">
-                            <input name="" type="reset" value="取消" class="cancel">
-                        </div>
+                <h2 class="title">活動介紹</h2>
+                <!-- CP start -->
+                <section class="cp">
+                    <div class="image">
+                        <img src="images/pic01.jpg" ">
                     </div>
+                    <ul>
+                        <li><span>活動對象：</span>一般親子</li>
+                        <li><span>活動地點：</span>鳳凰谷鳥園生態園區 (南投縣鹿谷鄉鳳凰村仁義路1-9號)</li>
+                        <li><span>活動日期：</span>108/11/9 (六)</li>
+                        <li><span>報名人數：</span>預計55人，如報名未達30人，活動取消。</li>
+                        <li><span>活動費用：</span>每人新台幣300元整(含講師費、材料費等)。</li>
+                        <li><span>聯絡方式：</span>049-2753100分機122 曾小姐</li>
+                        <li><span>E-MAIL：</span>tseng@nmns.edu.tw</li>
+                    </ul>
+                    <p class=" blockclear">國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。</p>
                 </section>
-                <!-- LP End -->
+                <!-- CP End -->
             </div>
         </div>
         <!-- footer Start-->
