--- a/one_page/mp_04.htm
+++ b/one_page/mp_04.htm
@@ -21,11 +21,11 @@
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
 </head>
 
-<body>
+<body class="version04">
     <!-- 直接跳主內容區 -->
     <a class="goCenter" href="#center" tabindex="1">按Enter到主內容區</a>
     <!-- wrapper Start -->
-    <div class="wrapper version04">
+    <div class="wrapper">
         <!-- header Start -->
         <header class="header">
             <div class="container">
