--- a/mulit_page/報名資料確認_團報團繳.htm
+++ b/mulit_page/報名資料確認_團報團繳.htm
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
     <!-- hyUI css -->
     <link rel="stylesheet" href="css/hyui.css">
+     <link rel="stylesheet" href="css/style.css">
     <!-- favicon -->
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:600&display=swap" rel="stylesheet">
