--- a/mulit_page/活動介紹_天文.htm
+++ b/mulit_page/活動介紹_天文.htm
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
     <!-- hyUI css -->
     <link rel="stylesheet" href="css/hyui.css">
+     <link rel="stylesheet" href="css/style.css">
     <!-- favicon -->
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:600&display=swap" rel="stylesheet">
@@ -24,7 +25,7 @@
     <!-- 直接跳主內容區 -->
     <a class="goCenter" href="#center" tabindex="1">按Enter到主內容區</a>
     <!-- wrapper Start -->
-    <div class="wrapper">
+    <div class="wrapper version01">
         <!-- header Start -->
         <header class="header">
             <div class="container">
