20200324 多頁式上傳資料

--- a/mulit_page/活動介紹_自然學友之家.htm
+++ b/mulit_page/活動介紹_自然學友之家.htm
@@ -21,11 +21,11 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:600&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="version02">
     <!-- 直接跳主內容區 -->
     <a class="goCenter" href="#center" tabindex="1">按Enter到主內容區</a>
     <!-- wrapper Start -->
-    <div class="wrapper version02">
+    <div class="wrapper">
         <!-- header Start -->
         <header class="header">
             <div class="container">
