20200325 主題網多頁式 上傳頁面

--- a/index.htm
+++ b/index.htm
@@ -81,6 +81,9 @@
     table th {
         background-color: #666;
     }
+    table td {
+        vertical-align: top;
+    }
     table thead {
         border-right: #666 8px solid;
         border-left: #666 8px solid;
@@ -119,37 +122,36 @@
                         <td></td>
                         <td>主題網_戶外探索</td>
                         <!-- 連結放到a裡面就好 -->
-                        <td><a href="one_page/mp_01.htm"></a></td>
+                        <td><a href="one_page/mp_01.htm"></a>&nbsp;(version01)</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>主題網_生物</td>
                         <!-- 連結放到a裡面就好 -->
-                        <td><a href="one_page/mp_02.htm"></a></td>
+                        <td><a href="one_page/mp_02.htm"></a>&nbsp;(version02)</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>主題網_地質</td>
                         <!-- 連結放到a裡面就好 -->
-                        <td><a href="one_page/mp_03.htm"></a></td>
+                        <td><a href="one_page/mp_03.htm"></a>&nbsp;(version03)</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>主題網_科教動手做</td>
                         <!-- 連結放到a裡面就好 -->
-                        <td><a href="one_page/mp_04.htm"></a></td>
+                        <td><a href="one_page/mp_04.htm"></a>&nbsp;(version04)</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>主題網_植物園</td>
                         <!-- 連結放到a裡面就好 -->
-                        <td><a href="one_page/mp_05.htm"></a></td>
+                        <td><a href="one_page/mp_05.htm"></a>&nbsp;(version05)</td>
                     </tr>
                 </tbody>
             </table>
-
-             <h2>多頁式</h2>
-             <table>
+            <h2>多頁式</h2>
+            <table>
                 <thead>
                     <tr>
                         <th class="num">編號</th>
@@ -162,14 +164,16 @@
                         <td></td>
                         <td>活動介紹</td>
                         <!-- 連結放到a裡面就好 -->
-                        <td><a href="mulit_page/活動介紹_天文.htm"></a><br><a href="mulit_page/活動介紹_選單垂直.htm"></a>
-                            <br><a href="mulit_page/活動介紹_自然學友之家.htm"></a></td>
+                        <td><a href="mulit_page/活動介紹_天文.htm"></a>&nbsp;(version01)<br><br>
+                            <a href="mulit_page/活動介紹_自然學友之家.htm"></a>&nbsp;(version02)<br><br>
+                            <a href="mulit_page/活動介紹_兒童.htm"></a>&nbsp;(version03)<br><br> <a href="mulit_page/活動介紹_教師.htm"></a>&nbsp;(version04)<br><br><a href="mulit_page/活動介紹_演講.htm"></a>&nbsp;(version05)<br><br>
+                            <a href="mulit_page/活動介紹_選單垂直.htm"></a>&nbsp;(加 menu_vertical）<br><br></td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>活動內容</td>
                         <!-- 連結放到a裡面就好 -->
-                        <td><a href="mulit_page/活動內容.htm"></a></td>
+                        <td><a href="mulit_page/活動內容.htm"></a>  &nbsp;(內頁menu垂直示範）</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -203,7 +207,6 @@
                     </tr>
                 </tbody>
             </table>
-             
         </div>
     </div>
     <a href="javascript:;" class="scrollToTop">回頁首</a>
