--- a/mulit_page/我要報名.htm
+++ b/mulit_page/我要報名.htm
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:600&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="version05">
     <!-- 直接跳主內容區 -->
     <a class="goCenter" href="#center" tabindex="1">按Enter到主內容區</a>
     <!-- wrapper Start -->
@@ -110,11 +110,11 @@
                         <!-- 表格end  -->
                         <!-- 會員登入start -->
                         <div class="member_login">
-                            <h3>會員登入</h3>
+                            <div class="title">會員登入</div>
                             <div class="remind">貼心小提醒：</div>
                             <p>科教活動個人報名系統已正式納入單一登入服務，108/9/30前已在本系統註冊過的學員，仍需先加入「科博館會員」，之後用科博館會員帳密登入即可快速報名/查詢個人報名系統的科教活動</p>
                             <p class="word_red">108/9/30前已成功報名/繳費的學員仍保有原先狀態，不受任何影響。</p>
-                            <button>會員單一登入</button>
+                            <button type="button" class="btn">會員單一登入</button>
                         </div>
                         <!-- 會員登入end -->
                     </div>
