--- a/mulit_page/活動介紹_演講.htm
+++ b/mulit_page/活動介紹_演講.htm
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:600&display=swap" rel="stylesheet">
 </head>
 
-<body class="version02 menu_vertical">
+<body class="version05">
     <!-- 直接跳主內容區 -->
     <a class="goCenter" href="#center" tabindex="1">按Enter到主內容區</a>
     <!-- wrapper Start -->
@@ -30,7 +30,7 @@
         <header class="header">
             <div class="container">
                 <a class="accesskey" href="#aU" id="aU" accesskey="U" title="網站標題" tabindex="2">:::</a>
-                <h1><img src="images/h1_pic01.jpg" alt=""><a href="../index.htm">給貓頭鷹一個家給貓頭鷹一個家給貓頭鷹一個家</a>
+                <h1><img src="images/h1_pic05.jpg" alt=""><a href="../index.htm">演講演講演講演講演講演講演講演講演講演講演講演講演講演講</a>
                 </h1>
                 <!-- menu Start -->
                 <nav class="menu">
