--- a/mulit_page/活動介紹_自然學友之家.htm
+++ b/mulit_page/活動介紹_自然學友之家.htm
@@ -30,7 +30,7 @@
         <header class="header">
             <div class="container">
                 <a class="accesskey" href="#aU" id="aU" accesskey="U" title="網站標題" tabindex="2">:::</a>
-                <h1><img src="images/h1_pic01.jpg" alt=""><a href="../index.htm">給貓頭鷹一個家給貓頭鷹一個家給貓頭鷹一個家</a>
+                <h1><img src="images/h1_pic02.jpg" alt=""><a href="../index.htm">自然學友之家自然學友之家自然學友之家自然學友之家自然學友之家</a>
                 </h1>
                 <!-- menu Start -->
                 <nav class="menu">
