--- a/mulit_page/活動內容.htm
+++ b/mulit_page/活動內容.htm
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:600&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="version05  menu_vertical">
     <!-- 直接跳主內容區 -->
     <a class="goCenter" href="#center" tabindex="1">按Enter到主內容區</a>
     <!-- wrapper Start -->
