--- a/index.htm
+++ b/index.htm
@@ -96,6 +96,9 @@
             text-align: center;
         }
     }
+    .annotation{
+        padding-bottom: 20px;
+    }
     </style>
 </head>
 
@@ -151,6 +154,7 @@
                 </tbody>
             </table>
             <h2>多頁式</h2>
+            <div class="annotation">&lt;body class="version02 menu_vertical"&gt; <span style="color:blue"> version02(版別) </span> <span style="color:green">menu_vertical(垂直menu)</span></div>   
             <table>
                 <thead>
                     <tr>
