--- a/index.htm
+++ b/index.htm
@@ -111,6 +111,7 @@
         <hr>
         <div class="table_wrapper">
             <h2>單頁式</h2>
+            <div class="annotation">&lt;body class="version01"&gt; <span style="color:blue"> version01(版別) </span> </div> 
             <!-- hyUI 標準頁面 -->
             <table>
                 <thead>
