--- a/mulit_page/報名資料確認.htm
+++ b/mulit_page/報名資料確認.htm
@@ -72,7 +72,7 @@
                         <div class="explanation"> 這是您剛才所選活動的詳細內容，請詳閱清楚。如確定這就是您要報名的活動，請按『登錄報名』進行報名，若想報名其他活動則請按『取消』。 </div>
                         <h3>請確認您的報名的活動資料</h3>
                         <!-- 表格start -->
-                        <div class="activity_Tb">
+                        <div class="memberTb">
                             <table>
                                 <tr>
                                     <th>活動名稱：</th>
@@ -99,7 +99,7 @@
                         <!-- 表格end  -->
                         <h3>請確認您的基本資料</h3>
                         <!-- 表格start -->
-                        <div class="activity_Tb">
+                        <div class="memberTb">
                             <table>
                                 <tr>
                                     <th>身分證字號：</th>
@@ -120,7 +120,7 @@
                             </table>
                         </div>
                         <!-- 表格end  -->
-                        <div class="btn_grp">
+                        <div class="btn_cente">
                             <input name="Search" type="submit" value="登入報名">
                             <input name="" type="reset" value="取消" class="cancel">
                         </div>
