--- a/mulit_page/報名資料確認.htm
+++ b/mulit_page/報名資料確認.htm
@@ -120,7 +120,7 @@
                             </table>
                         </div>
                         <!-- 表格end  -->
-                        <div class="btn_cente">
+                        <div class="btn_center">
                             <input name="Search" type="submit" value="登入報名">
                             <input name="" type="reset" value="取消" class="cancel">
                         </div>
