--- a/one_page/mp_05.htm
+++ b/one_page/mp_05.htm
@@ -170,7 +170,7 @@
                 <div class="content">
                     <p>這是您剛才所選活動的詳細內容，請詳閱清楚。如確定這就是您要報名的活動，請按『登錄報名』進行報名，若想報名其他活動則請按『取消』</p>
                     <h3>請確認您的報名的活動資料</h3>
-                    <div class="lightboxTb">
+                    <div class="memberTb">
                         <table>
                             <tr>
                                 <th>活動名稱：</th>
@@ -195,7 +195,7 @@
                         </table>
                     </div>
                     <h3> 請確認您的基本資料</h3>
-                    <div class="lightboxTb">
+                    <div class="memberTb">
                         <table>
                             <tr>
                                 <th>身分證字號：</th>
@@ -215,7 +215,7 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="btn_grp">
+                    <div class="btn_center">
                         <input name="Search" type="submit" value="登入報名">
                         <input name="" type="reset" value="取消" class="cancel">
                     </div>
