--- a/mulit_page/報名資料確認.htm
+++ b/mulit_page/報名資料確認.htm
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:600&display=swap" rel="stylesheet">
 </head>
 
-<body class="version05">
+<body class="version01">
     <!-- 直接跳主內容區 -->
     <a class="goCenter" href="#center" tabindex="1">按Enter到主內容區</a>
     <!-- wrapper Start -->
@@ -75,23 +75,23 @@
                         <div class="memberTb">
                             <table>
                                 <tr>
-                                    <th>活動名稱：</th>
+                                    <th>活動名稱</th>
                                     <td>創意機關王主題研習</td>
                                 </tr>
                                 <tr>
-                                    <th>活動時間：</th>
+                                    <th>活動時間</th>
                                     <td>2020/1/19(日)</td>
                                 </tr>
                                 <tr>
-                                    <th>費用：</th>
+                                    <th>費用</th>
                                     <td>1000</td>
                                 </tr>
                                 <tr>
-                                    <th>活動對象：</th>
+                                    <th>活動對象</th>
                                     <td>國中2年級</td>
                                 </tr>
                                 <tr>
-                                    <th>活動內容：</th>
+                                    <th>活動內容</th>
                                     <td>冒險蟲蟲、四足巨獸及橫行霸道</td>
                                 </tr>
                             </table>
@@ -102,19 +102,19 @@
                         <div class="memberTb">
                             <table>
                                 <tr>
-                                    <th>身分證字號：</th>
+                                    <th>身分證字號</th>
                                     <td>A123456789</td>
                                 </tr>
                                 <tr>
-                                    <th>姓名：</th>
+                                    <th>姓名</th>
                                     <td>羅郁晴</td>
                                 </tr>
                                 <tr>
-                                    <th>出生年月日：</th>
+                                    <th>出生年月日</th>
                                     <td>1990/03/19</td>
                                 </tr>
                                 <tr>
-                                    <th>手機：</th>
+                                    <th>手機</th>
                                     <td>0912-345678</td>
                                 </tr>
                             </table>
