20200709 我要報名頁面修改上傳

--- a/mulit_page/我要報名.htm
+++ b/mulit_page/我要報名.htm
@@ -100,7 +100,7 @@
                                     <tr>
                                         <td>給貓頭鷹一個家</td>
                                         <td class="aCenter">2019/10/16(三) 14:00~15:00 </td>
-                                        <td class="aCenter"><button type="button" class="btn btn-orange signupbtn">我要報名</button></td>
+                                        <td class="aCenter"><button type="button" class="btn btn-orange ">我要報名</button></td>
                                         <td class="aCenter">32</td>
                                         <td class="aCenter"><button type="button" class="btn btn-gray">登錄名單</button></td>
                                     </tr>
