--- a/mulit_page/我要報名.htm
+++ b/mulit_page/我要報名.htm
@@ -15,13 +15,13 @@
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
     <!-- hyUI css -->
     <link rel="stylesheet" href="css/hyui.css">
-     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- favicon -->
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:600&display=swap" rel="stylesheet">
 </head>
 
-<body class="version05">
+<body class="version01">
     <!-- 直接跳主內容區 -->
     <a class="goCenter" href="#center" tabindex="1">按Enter到主內容區</a>
     <!-- wrapper Start -->
@@ -100,7 +100,7 @@
                                     <tr>
                                         <td>給貓頭鷹一個家</td>
                                         <td class="aCenter">2019/10/16(三) 14:00~15:00 </td>
-                                        <td class="aCenter"><button type="button" class="btn btn-orange ">我要報名</button></td>
+                                        <td class="aCenter"><button type="button" class="btn btn-orange" id="openModal">我要報名</button></td>
                                         <td class="aCenter">32</td>
                                         <td class="aCenter"><button type="button" class="btn btn-gray">登錄名單</button></td>
                                     </tr>
@@ -109,14 +109,25 @@
                         </div>
                         <!-- 表格end  -->
                         <!-- 會員登入start -->
-                        <div class="member_login">
+                        <!-- <div class="member_login">
                             <div class="title">會員登入</div>
                             <div class="remind">貼心小提醒：</div>
                             <p>科教活動個人報名系統已正式納入單一登入服務，108/9/30前已在本系統註冊過的學員，仍需先加入「科博館會員」，之後用科博館會員帳密登入即可快速報名/查詢個人報名系統的科教活動</p>
                             <p class="word_red">108/9/30前已成功報名/繳費的學員仍保有原先狀態，不受任何影響。</p>
                             <button type="button" class="btn">會員單一登入</button>
-                        </div>
+                        </div> -->
                         <!-- 會員登入end -->
+                        <!--燈箱1 start-->
+                        <div id="modal1" class="modal">
+                            <h2>會員登入</h2>
+                            <div class="content">
+                                <h3>貼心小提醒：</h3>
+                                <p>科教活動個人報名系統已正式納入單一登入服務，108/9/30前已在本系統註冊過的學員，仍需先加入「科博館會員」，之後用科博館會員帳密登入即可快速報名/查詢個人報名系統的科教活動</p>
+                                <p class="word_red">108/9/30前已成功報名/繳費的學員仍保有原先狀態，不受任何影響。</p>
+                                <button class="btn">會員單一登入</button>
+                            </div>
+                        </div>
+                        <!--燈箱1 end-->
                     </div>
                 </section>
                 <!-- LP End -->
