--- a/one_page/mp_02.htm
+++ b/one_page/mp_02.htm
@@ -173,23 +173,23 @@
                     <div class="memberTb">
                         <table>
                             <tr>
-                                <th>活動名稱：</th>
+                                <th>活動名稱</th>
                                 <td>創意機關王主題研習</td>
                             </tr>
                             <tr>
-                                <th>活動日期：</th>
+                                <th>活動日期</th>
                                 <td>智能系列－仿生機械<br> 2020/1/18(六) 9:00~17:00 </td>
                             </tr>
                             <tr>
-                                <th>費用：</th>
+                                <th>費用</th>
                                 <td>免費</td>
                             </tr>
                             <tr>
-                                <th>活動對象：</th>
+                                <th>活動對象</th>
                                 <td>社會大眾</td>
                             </tr>
                             <tr>
-                                <th>活動內容：</th>
+                                <th>活動內容</th>
                                 <td>運用積木特性及機械原理，製作成仿真動物的運動機構，配合紅外線遙控機體進行挑戰任務。</td>
                             </tr>
                         </table>
@@ -198,19 +198,19 @@
                     <div class="memberTb">
                         <table>
                             <tr>
-                                <th>身分證字號：</th>
+                                <th>身分證字號</th>
                                 <td>A123456789</td>
                             </tr>
                             <tr>
-                                <th>姓名：</th>
+                                <th>姓名</th>
                                 <td>羅郁晴</td>
                             </tr>
                             <tr>
-                                <th>出生年月日：</th>
+                                <th>出生年月日</th>
                                 <td>1990/03/19</td>
                             </tr>
                             <tr>
-                                <th>手機：</th>
+                                <th>手機</th>
                                 <td>社會大眾</td>
                             </tr>
                         </table>
