--- a/mulit_page/活動介紹_天文.htm
+++ b/mulit_page/活動介紹_天文.htm
@@ -35,13 +35,13 @@
                 <!-- menu Start -->
                 <nav class="menu">
                     <ul>
-                        <li><a href="#">活動介紹</a></li>
-                        <li><a href="#">活動內容</a></li>
+                        <li><a href="#">活動介紹活</a></li>
+                        <li><a href="#">活動內容活</a></li>
                         <li><a href="#">報名/繳費方式</a></li>
-                        <li><a href="#">我要報名</a></li>
-                        <li><a href="#">查詢/取消</a></li>
-                        <li><a href="#">活動介紹</a></li>
-                        <li><a href="#">活動內容</a></li>
+                        <li><a href="#">我要報名活</a></li>
+                        <li><a href="#">查詢/取消活</a></li>
+                        <li><a href="#">活動介紹活</a></li>
+                        <li><a href="#">活動內容活</a></li>
                     </ul>
                 </nav>
                 <!-- menu End -->
